--- a/index.html
+++ b/index.html
@@ -37,16 +37,11 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Guozhen Ding | Software Developer" />
   <meta property="og:description" content="Software Developer" />
-  <meta property="og:url" content="https://Guozhenbhogayata.github.io/" />
+  <meta property="og:url" content="https://guozhen-dev.github.io/" />
   <meta property="og:site_name" content="Guozhen Ding | Software Developer" />
-  <meta property="article:publisher" content="https://Guozhenbhogayata.github.io/" />
-  <meta property="og:image" content="https://Guozhenbhogayata.github.io/examples/preview.JPG" />
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@Guozhen_bhogayata" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/Guozhen_bhogayata" />
+  <meta property="article:publisher" content="https://guozhen-dev.github.io/" />
+  <meta property="og:image" content="https://guozhen-dev.github.io/examples/preview.JPG" />
+
   <meta name="author" content="Guozhen Ding" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
@@ -159,7 +154,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Guozhen
-        Bhogayata</a><span class="black-text">Software Developer</span>
+        Ding</a><span class="black-text">Software Developer</span>
     </div>
   </nav>
 
@@ -210,7 +205,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Guozhen Ding.</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
+              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#00046f"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>I am a fourth year Computer Engineering student at University of Toronto, with experience and strong interests on Software Development and Computer System Security Analytics</h5>
             </div>
@@ -437,14 +432,6 @@
                   <li>Implemented the RSA authentication on Altera FPGA.</li>
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Guozhenbhogayata/music-player"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -475,14 +462,6 @@
                   <li>User can use this tool to Fuzz a Client/Server structured application with minimum understanding of the source code.</li>
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit Blog website" href="https://flask-heroku-blog.herokuapp.com/" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Guozhenbhogayata/flask-blog"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -660,7 +639,7 @@
         <p>
           <a aria-label="Email Guozhen" href="mailto:mail@guozhen.dev" target="_blank" data-position="top"
             data-tooltip="Email Guozhen" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Guozhen" href="mailto:vbhogayata@gmail.com"
+              class="fa fa-envelope"></i><a aria-label="Email Guozhen" href="mailto:mail@guozhen.dev"
               class="hoverline">mail@guozhen.dev</a></a>
         </p>
         <p>
